--- a/Backend/Gymtec_API/Gymtec_API.csproj
+++ b/Backend/Gymtec_API/Gymtec_API.csproj
@@ -173,12 +173,15 @@
     <Compile Include="Controllers\EmpleadoController.cs" />
     <Compile Include="Controllers\EquipoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PermisoController.cs" />
     <Compile Include="Controllers\PlanillaController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Controllers\PuestoController.cs" />
     <Compile Include="Controllers\ServiciosController.cs" />
     <Compile Include="Controllers\SucursalController.cs" />
     <Compile Include="Controllers\TelefonoController.cs" />
+    <Compile Include="Controllers\TipoEquipoController.cs" />
+    <Compile Include="Controllers\TratamientoController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Empleado.cs">
       <DependentUpon>Model1.tt</DependentUpon>
