--- a/FrontEndCliente/package.json
+++ b/FrontEndCliente/package.json
@@ -15,10 +15,17 @@
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
+    "@angular/localize": "~12.0.2",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@fullcalendar/angular": "^5.7.1",
+    "@fullcalendar/daygrid": "^5.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
+    "angular-calendar": "^0.28.24",
     "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
+    "date-fns": "^2.22.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
