--- a/Backend/Gymtec_API/Gymtec_API.csproj
+++ b/Backend/Gymtec_API/Gymtec_API.csproj
@@ -226,6 +226,7 @@
     <Compile Include="Cliente.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\ClaseClienteController.cs" />
     <Compile Include="Controllers\ClaseController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\EmpleadoController.cs" />
@@ -237,13 +238,16 @@
     <Compile Include="Controllers\PermisoController.cs" />
     <Compile Include="Controllers\PlanillaController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
+    <Compile Include="Controllers\ProductoSucursalController.cs" />
     <Compile Include="Controllers\PuestoController.cs" />
+    <Compile Include="Controllers\PuestoPermisoController.cs" />
     <Compile Include="Controllers\ServiciosController.cs" />
     <Compile Include="Controllers\StoreProceduresController.cs" />
     <Compile Include="Controllers\SucursalController.cs" />
     <Compile Include="Controllers\TelefonoController.cs" />
     <Compile Include="Controllers\TipoEquipoController.cs" />
     <Compile Include="Controllers\TratamientoController.cs" />
+    <Compile Include="Controllers\TratamientoSucursalController.cs" />
     <Compile Include="Controllers\tratamientos_asociadosController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Empleado.cs">
@@ -263,6 +267,11 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="gymtecdatabaseDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>gymtecdatabaseDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="inventario_gimnasio_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -388,6 +397,17 @@
     <Content Include="Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="gymtecdatabaseDataSet.xsc">
+      <DependentUpon>gymtecdatabaseDataSet.xsd</DependentUpon>
+    </Content>
+    <None Include="gymtecdatabaseDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>gymtecdatabaseDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="gymtecdatabaseDataSet.xss">
+      <DependentUpon>gymtecdatabaseDataSet.xsd</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -412,6 +432,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Reportes\" />
     <Folder Include="Views\Default\" />
   </ItemGroup>
   <ItemGroup>
