--- a/FrontEndCliente/package.json
+++ b/FrontEndCliente/package.json
@@ -26,7 +26,10 @@
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
     "date-fns": "^2.22.1",
+    "html-to-pdfmake": "^2.2.4",
     "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
+    "pdfmake": "^0.1.71",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -35,6 +38,7 @@
     "@angular-devkit/build-angular": "~12.0.2",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
+    "@types/html-to-pdfmake": "^2.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
