--- a/Backend/Gymtec_API/Gymtec_API.csproj
+++ b/Backend/Gymtec_API/Gymtec_API.csproj
@@ -257,7 +257,7 @@
     <Compile Include="Controllers\EquipoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\mostrar_clasesController.cs" />
-    <Compile Include="Controllers\mostrar_clientesController.cs" />
+    <Compile Include="Controllers\mostrar_empleadosController.cs" />
     <Compile Include="Controllers\mostrar_inventarioController.cs" />
     <Compile Include="Controllers\PDFController.cs" />
     <Compile Include="Controllers\PermisoController.cs" />
@@ -328,7 +328,7 @@
     <Compile Include="mostrar_clases_gimnasio_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="mostrar_clientes.cs">
+    <Compile Include="mostrar_empleados.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="mostrar_inventario.cs">
