--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 \Backend\Gymtec_API\bin
 \Backend\Gymtec_API\.vs
 \Backend\Gymtec_API\obj
+
+\Backend\Gymtec_MongoAPI\MongoGymtecAPI\bin
+\Backend\Gymtec_MongoAPI\MongoGymtecAPI\.vs
+\Backend\Gymtec_MongoAPI\MongoGymtecAPI\obj
