--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 \Backend\Gymtec_MongoAPI\MongoGymtecAPI\.vs
 \Backend\Gymtec_MongoAPI\MongoGymtecAPI\obj
 Backend/Gymtec_API/.vs/
+
+Backend/Gymtec_API/obj/Debug/
+
+Backend/Gymtec_API/bin/
