--- a/Backend/Gymtec_API/Web.config
+++ b/Backend/Gymtec_API/Web.config
@@ -91,9 +91,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="gymtecdatabaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NHJ7DLH;initial catalog=gymtecdatabase;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="gymtecdatabaseEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NHJ7DLH;initial catalog=gymtecdatabase;persist security info=True;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="gymtecdatabaseConnectionString" connectionString="Data Source=DESKTOP-NHJ7DLH;Initial Catalog=gymtecdatabase;Persist Security Info=True;User ID=sa;Password=12345" providerName="System.Data.SqlClient" />
+    <add name="gymtecdatabaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-4ASEEIOU;initial catalog=gymtecdatabase;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="gymtecdatabaseEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-4ASEEIOU;initial catalog=gymtecdatabase;persist security info=True;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="gymtecdatabaseConnectionString" connectionString="Data Source=LAPTOP-4ASEEIOU;Initial Catalog=gymtecdatabase;Persist Security Info=True;User ID=sa;Password=12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
