--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ Backend/Gymtec_API/.vs/
 Backend/Gymtec_API/obj/Debug/
 
 Backend/Gymtec_API/bin/
+
+Backend/Gymtec_MongoAPI/MongoGymtecAPI/.vs/MongoGymtecAPI/v16/
+
+Backend/Gymtec_MongoAPI/MongoGymtecAPI/obj/Debug/net5.0/
+
+Backend/Gymtec_MongoAPI/MongoGymtecAPI/bin/Debug/net5.0/ref/
+
+Backend/Gymtec_MongoAPI/MongoGymtecAPI/bin/Debug/net5.0/
