--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ Backend/Gymtec_API/.vs/Gymtec_API/config/
 Backend/Gymtec_API/bin/
 
 Backend/Gymtec_API/obj/Debug/
+
+Backend/Gymtec_API/obj/Release/
