--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ Backend/Gymtec_MongoAPI/MongoGymtecAPI/obj/Debug/net5.0/
 Backend/Gymtec_MongoAPI/MongoGymtecAPI/bin/Debug/net5.0/ref/
 
 Backend/Gymtec_MongoAPI/MongoGymtecAPI/bin/Debug/net5.0/
+
+FrontEnd/.vs/FrontEnd/v16/
+
+FrontEnd/.vs/
