--- a/FrontEnd/.vscode/settings.json
+++ b/FrontEnd/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "appService.defaultWebAppToDeploy": "/subscriptions/1823f3af-238b-4b2e-833d-652f7ef45676/resourceGroups/Contenedor/providers/Microsoft.Web/sites/webgymtec",
-    "appService.deploySubpath": "dist\\FrontEnd"
+    "appService.defaultWebAppToDeploy": "/subscriptions/1823f3af-238b-4b2e-833d-652f7ef45676/resourceGroups/Contenedor/providers/Microsoft.Web/sites/webgymtec"
 }
